2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Use 5/6 size of
	SystemFont as font size (same as in task launcher).

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_constructed): Support image sets in
	  ~/MyDocs/.images

	* src/hd-incoming-event-window.c
	  (hd_incoming_event_window_update_title_and_amount,
	  hd_incoming_event_window_realize,
	  hd_incoming_event_window_set_property): Add "... " suffix to title
	  of multiple notifications in task switcher.

2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#118133 - Icon for Maemo in Add bookmark of Desktop menu is
	large in size

	* src/hd-bookmark-manager.c (hd_bookmark_manager_add_bookmark_item):
	Scale images to correct size in "Add bookmark" dialog.

	* src/notification-groups.conf: Add definition for class 0 sms message
	category.

	* debian/changelog: Update.

2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.30

	* configure.ac: 0.3.30

2009-05-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#112313 - Required implementation details for attaching
	message notifications to thumbnails in task switcher by thread.
	Fixes: NB#98543 - SMS/Chat notification received in switcher view for
	currently running task is not as expected

	* src/hd-incoming-event-window.c: Use relative time instead of
	absolute time for display.

	* src/hd-incoming-events.c: Changed incoming event display. Add
	support for splitting in threads. Add support for amount hint.

	* src/notification-groups.conf: Changed incoming event display.

	* src/test-incoming-event.c (main): Add current time.

	* src/test-notifications.py (emit_notification): Add threading test.

	* debian/changelog: Update.

2009-05-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.29

	* configure.ac: 0.3.29
