@@ -3,6 +3,8 @@ hildon-home (0.3.31~unreleased) unstable; urgency=low
   Jan Arne
   * Fixes: NB#118133 - Icon for Maemo in Add bookmark of Desktop menu is large
     in size
+  * Fixes: NB#120026 - New notification category needed for foreground
+    sms/chatmessages
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon,  1 Jun 2009 08:38:21 +0300
 
